# resolvec

./: CMakeLists.txt  Readme.md
src/: resolvec.h  tests_examples.c
src/dns/: dns.c  dns.h  functions.md  packet.c  packet.h
src/misc/: bytes.c  bytes.h  debug.c  debug.h  functions.md  misc.h
src/net/: format.c  format.h  functions.md  net.h  transfer.c  transfer.h
